{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 158,
  "lineage": "3054ef48-6a80-4447-edcc-a4751a82bd07",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6ebe6ba66872fa8",
            "arn": "arn:aws:ec2:us-east-1:313616258649:elastic-ip/eipalloc-0a6ebe6ba66872fa8",
            "association_id": "eipassoc-05ea23f7247474e2a",
            "domain": "vpc",
            "id": "eipalloc-0a6ebe6ba66872fa8",
            "instance": "i-03ba60293249c4c67",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0952170e429dc388f",
            "private_dns": "ip-10-0-101-27.ec2.internal",
            "private_ip": "10.0.101.27",
            "public_dns": "ec2-44-197-54-8.compute-1.amazonaws.com",
            "public_ip": "44.197.54.8",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "environment": "dev",
              "owners": "hr"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_ebs_volume.this",
            "module.ec2_public.aws_ec2_tag.spot_instance",
            "module.ec2_public.aws_eip.this",
            "module.ec2_public.aws_iam_instance_profile.this",
            "module.ec2_public.aws_iam_role.this",
            "module.ec2_public.aws_iam_role_policy_attachment.this",
            "module.ec2_public.aws_instance.ignore_ami",
            "module.ec2_public.aws_instance.this",
            "module.ec2_public.aws_security_group.this",
            "module.ec2_public.aws_spot_instance_request.this",
            "module.ec2_public.aws_volume_attachment.this",
            "module.ec2_public.aws_vpc_security_group_egress_rule.this",
            "module.ec2_public.aws_vpc_security_group_ingress_rule.this",
            "module.ec2_public.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public.data.aws_partition.current",
            "module.ec2_public.data.aws_ssm_parameter.this",
            "module.ec2_public.data.aws_subnet.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313616258649:subnet/subnet-082e447c156b914a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 242,
            "cidr_block": "10.0.101.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082e447c156b914a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "313616258649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "hr-dev-eksdemo-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "dev",
              "kubernetes.io/cluster/hr-dev-eksdemo": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "hr"
            },
            "vpc_id": "vpc-0939f185e10fcfcae"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-083e865b97bdf1c1b",
            "arn": "arn:aws:ec2:us-east-1:313616258649:instance/i-03ba60293249c4c67",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03ba60293249c4c67",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eks-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0952170e429dc388f",
            "private_dns": "ip-10-0-101-27.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.27",
            "public_dns": "ec2-54-210-79-187.compute-1.amazonaws.com",
            "public_ip": "54.210.79.187",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-033c30f243082d2b5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-082e447c156b914a4",
            "tags": {
              "Name": "hr-dev-BastionHost",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-BastionHost",
              "environment": "dev",
              "owners": "hr"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "hr-dev-BastionHost",
              "environment": "dev",
              "owners": "hr"
            },
            "vpc_security_group_ids": [
              "sg-025469016e4e2420c",
              "sg-05399a56b8e41083b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_iam_instance_profile.this",
            "module.ec2_public.aws_iam_role.this",
            "module.ec2_public.aws_security_group.this",
            "module.ec2_public.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public.data.aws_partition.current",
            "module.ec2_public.data.aws_ssm_parameter.this",
            "module.ec2_public.data.aws_subnet.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313616258649:security-group/sg-05399a56b8e41083b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IPv4 traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow all IPv6 traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05399a56b8e41083b",
            "ingress": [],
            "name": "hr-dev-BastionHost-20250726192659881600000006",
            "name_prefix": "hr-dev-BastionHost-",
            "owner_id": "313616258649",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hr-dev-BastionHost",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-BastionHost",
              "environment": "dev",
              "owners": "hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0939f185e10fcfcae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ec2_public.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313616258649:security-group-rule/sgr-0fda8338e4940c105",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-0fda8338e4940c105",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-05399a56b8e41083b",
            "security_group_rule_id": "sgr-0fda8338e4940c105",
            "tags": {
              "Name": "hr-dev-BastionHost-ipv4_default",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-BastionHost-ipv4_default",
              "environment": "dev",
              "owners": "hr"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_security_group.this",
            "module.ec2_public.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313616258649:security-group-rule/sgr-0a2768cbe0c8d157a",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-0a2768cbe0c8d157a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-05399a56b8e41083b",
            "security_group_rule_id": "sgr-0a2768cbe0c8d157a",
            "tags": {
              "Name": "hr-dev-BastionHost-ipv6_default",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-BastionHost-ipv6_default",
              "environment": "dev",
              "owners": "hr"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_security_group.this",
            "module.ec2_public.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313616258649:security-group/sg-025469016e4e2420c",
            "description": "Security Group with SSH port open for everybody (IPv4 CIDR), egress ports are all world open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025469016e4e2420c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "hr-dev-public-bastion-sg-20250726192644219800000004",
            "name_prefix": "hr-dev-public-bastion-sg-",
            "owner_id": "313616258649",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hr-dev-public-bastion-sg",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-public-bastion-sg",
              "environment": "dev",
              "owners": "hr"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0939f185e10fcfcae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1425297024",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-025469016e4e2420c",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-4289240448",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-025469016e4e2420c",
            "security_group_rule_id": "sgr-07f89cbbd70ce1fc3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313616258649:network-acl/acl-0d3803b96a7a7416d",
            "default_network_acl_id": "acl-0d3803b96a7a7416d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d3803b96a7a7416d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "313616258649",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-03dd46b8596067d30",
              "subnet-053a094bd53f00ee3",
              "subnet-082e447c156b914a4",
              "subnet-08eecadfca037919b",
              "subnet-0c7ef21c290a165d2",
              "subnet-0d54be9a32d0975b2"
            ],
            "tags": {
              "Name": "hr-dev-eksdemo-default",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-eksdemo-default",
              "environment": "dev",
              "owners": "hr"
            },
            "vpc_id": "vpc-0939f185e10fcfcae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313616258649:route-table/rtb-0657b6d3152128de0",
            "default_route_table_id": "rtb-0657b6d3152128de0",
            "id": "rtb-0657b6d3152128de0",
            "owner_id": "313616258649",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "hr-dev-eksdemo-default",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-eksdemo-default",
              "environment": "dev",
              "owners": "hr"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0939f185e10fcfcae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313616258649:security-group/sg-08bd17bc606b1bc9c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-08bd17bc606b1bc9c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "313616258649",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hr-dev-eksdemo-default",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-eksdemo-default",
              "environment": "dev",
              "owners": "hr"
            },
            "vpc_id": "vpc-0939f185e10fcfcae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a3b7796596e70372",
            "arn": "arn:aws:ec2:us-east-1:313616258649:elastic-ip/eipalloc-0a3b7796596e70372",
            "association_id": "eipassoc-095d9c348da1b553f",
            "domain": "vpc",
            "id": "eipalloc-0a3b7796596e70372",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0df611aa9b068ed8e",
            "private_dns": "ip-10-0-101-26.ec2.internal",
            "private_ip": "10.0.101.26",
            "public_dns": "ec2-52-73-189-107.compute-1.amazonaws.com",
            "public_ip": "52.73.189.107",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "hr-dev-eksdemo-us-east-1a",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-eksdemo-us-east-1a",
              "environment": "dev",
              "owners": "hr"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313616258649:internet-gateway/igw-041df28c92318c060",
            "id": "igw-041df28c92318c060",
            "owner_id": "313616258649",
            "region": "us-east-1",
            "tags": {
              "Name": "hr-dev-eksdemo",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-eksdemo",
              "environment": "dev",
              "owners": "hr"
            },
            "vpc_id": "vpc-0939f185e10fcfcae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a3b7796596e70372",
            "association_id": "eipassoc-095d9c348da1b553f",
            "connectivity_type": "public",
            "id": "nat-0872e46baa05f80eb",
            "network_interface_id": "eni-0df611aa9b068ed8e",
            "private_ip": "10.0.101.26",
            "public_ip": "52.73.189.107",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-082e447c156b914a4",
            "tags": {
              "Name": "hr-dev-eksdemo-us-east-1a",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-eksdemo-us-east-1a",
              "environment": "dev",
              "owners": "hr"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0495a2678f5541cc41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0872e46baa05f80eb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0495a2678f5541cc4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-041df28c92318c060",
            "id": "r-rtb-0109948018066d8c01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0109948018066d8c0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313616258649:route-table/rtb-0a8408859bac80fe3",
            "id": "rtb-0a8408859bac80fe3",
            "owner_id": "313616258649",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "hr-dev-eksdemo-db",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-eksdemo-db",
              "environment": "dev",
              "owners": "hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0939f185e10fcfcae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313616258649:route-table/rtb-0495a2678f5541cc4",
            "id": "rtb-0495a2678f5541cc4",
            "owner_id": "313616258649",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0872e46baa05f80eb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hr-dev-eksdemo-private",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-eksdemo-private",
              "environment": "dev",
              "owners": "hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0939f185e10fcfcae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313616258649:route-table/rtb-0109948018066d8c0",
            "id": "rtb-0109948018066d8c0",
            "owner_id": "313616258649",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-041df28c92318c060",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hr-dev-eksdemo-public",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-eksdemo-public",
              "environment": "dev",
              "owners": "hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0939f185e10fcfcae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f32f64b48e742bc7",
            "region": "us-east-1",
            "route_table_id": "rtb-0a8408859bac80fe3",
            "subnet_id": "subnet-0d54be9a32d0975b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc4b5c6c71dbfe2d",
            "region": "us-east-1",
            "route_table_id": "rtb-0a8408859bac80fe3",
            "subnet_id": "subnet-053a094bd53f00ee3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0782ca2df0feaed0b",
            "region": "us-east-1",
            "route_table_id": "rtb-0495a2678f5541cc4",
            "subnet_id": "subnet-03dd46b8596067d30"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5961847cb9a32fd",
            "region": "us-east-1",
            "route_table_id": "rtb-0495a2678f5541cc4",
            "subnet_id": "subnet-0c7ef21c290a165d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e98cdbc735b2de7",
            "region": "us-east-1",
            "route_table_id": "rtb-0109948018066d8c0",
            "subnet_id": "subnet-082e447c156b914a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0124d465c37bb8527",
            "region": "us-east-1",
            "route_table_id": "rtb-0109948018066d8c0",
            "subnet_id": "subnet-08eecadfca037919b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313616258649:subnet/subnet-0d54be9a32d0975b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d54be9a32d0975b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313616258649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hr-dev-eksdemo-db-us-east-1a",
              "Type": "database-subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-eksdemo-db-us-east-1a",
              "Type": "database-subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "vpc_id": "vpc-0939f185e10fcfcae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313616258649:subnet/subnet-053a094bd53f00ee3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053a094bd53f00ee3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313616258649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hr-dev-eksdemo-db-us-east-1b",
              "Type": "database-subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-eksdemo-db-us-east-1b",
              "Type": "database-subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "vpc_id": "vpc-0939f185e10fcfcae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313616258649:subnet/subnet-03dd46b8596067d30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03dd46b8596067d30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313616258649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hr-dev-eksdemo-private-us-east-1a",
              "Type": "private-subnets",
              "environment": "dev",
              "kubernetes.io/cluster/hr-dev-eksdemo": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-eksdemo-private-us-east-1a",
              "Type": "private-subnets",
              "environment": "dev",
              "kubernetes.io/cluster/hr-dev-eksdemo": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "hr"
            },
            "vpc_id": "vpc-0939f185e10fcfcae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313616258649:subnet/subnet-0c7ef21c290a165d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7ef21c290a165d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313616258649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hr-dev-eksdemo-private-us-east-1b",
              "Type": "private-subnets",
              "environment": "dev",
              "kubernetes.io/cluster/hr-dev-eksdemo": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-eksdemo-private-us-east-1b",
              "Type": "private-subnets",
              "environment": "dev",
              "kubernetes.io/cluster/hr-dev-eksdemo": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "hr"
            },
            "vpc_id": "vpc-0939f185e10fcfcae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313616258649:subnet/subnet-082e447c156b914a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082e447c156b914a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "313616258649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hr-dev-eksdemo-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "dev",
              "kubernetes.io/cluster/hr-dev-eksdemo": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-eksdemo-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "dev",
              "kubernetes.io/cluster/hr-dev-eksdemo": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "hr"
            },
            "vpc_id": "vpc-0939f185e10fcfcae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313616258649:subnet/subnet-08eecadfca037919b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08eecadfca037919b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "313616258649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hr-dev-eksdemo-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "dev",
              "kubernetes.io/cluster/hr-dev-eksdemo": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-eksdemo-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "dev",
              "kubernetes.io/cluster/hr-dev-eksdemo": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "hr"
            },
            "vpc_id": "vpc-0939f185e10fcfcae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313616258649:vpc/vpc-0939f185e10fcfcae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d3803b96a7a7416d",
            "default_route_table_id": "rtb-0657b6d3152128de0",
            "default_security_group_id": "sg-08bd17bc606b1bc9c",
            "dhcp_options_id": "dopt-0334dd5fd98af6b07",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0939f185e10fcfcae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0657b6d3152128de0",
            "owner_id": "313616258649",
            "region": "us-east-1",
            "tags": {
              "Name": "hr-dev-eksdemo",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-dev-eksdemo",
              "environment": "dev",
              "owners": "hr"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}